--- a/forms.html
+++ b/forms.html
@@ -8,25 +8,27 @@
     <link href="style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
 </head>
-<body>
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="lab10.html">
+              Bootstrap Project
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/2560px-Bootstrap_logo.svg.png" width="20" style="display:inline; margin-left: 5px; vertical-align: middle;">
+          </a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
               <li class="active"><a href="lab10.html">Home</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="forms.html">Contact</a></li>
+              <li><a href="#">Forms</a></li>
+              <li><a href="#footer">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -52,6 +54,7 @@
     </div>
 </div>
 
+
 <section id="footer">
     <footer class="container-fluid text-center">
         <p>Lab 5 Activity: Building a Music-Themed Website</p>
@@ -59,6 +62,5 @@
         <p>CPN 134</p>
         <p>n01630199@humber.ca</p>
     </footer>
-
 </body>
 </html>
