--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,7 @@
             </button>
             <a class="navbar-brand" href="lab10.html">
               Bootstrap Project
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/2560px-Bootstrap_logo.svg.png" width="20" style="display:inline; margin-left: 5px; vertical-align: middle;">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/2560px-Bootstrap_logo.svg.png" alt="img" width="20" style="display:inline; margin-left: 5px; vertical-align: middle;">
           </a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
